--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-.bm{
+.box{
 	width:380px;
-	padding:50px;
 	border:15px solid blue;
-	marging:28px;
+	padding:50px;
+	marging:20px;
 	background-color:lightblue;
 }
 /* Your CSS Code here. */
